--- a/src/classes/_hu-pos.scss
+++ b/src/classes/_hu-pos.scss
@@ -6,7 +6,7 @@ $hu-pos-parents: hu-get-class-modules($hu-pos-modules, parents, null);
 @each $module in hu-format-modules($hu-pos-core-modules) {
   @each $scale, $value in $hu-pos-scale {
     @each $type, $properties in $hu-pos-types {
-      $class-name: hu-class-name("#{$type}-#{$scale}");
+      $class-name: hu-class-name("#{$type}:#{$scale}");
 
       @include hu-generic($class-name, $module) {
         @each $property in $properties {
@@ -22,7 +22,7 @@ $hu-pos-parents: hu-get-class-modules($hu-pos-modules, parents, null);
     @include hu-media-query($mq-value) {
       @each $scale, $value in $hu-pos-scale {
         @each $type, $properties in $hu-pos-types {
-          $class-name: hu-class-name("#{$type}-#{$scale}");
+          $class-name: hu-class-name("#{$type}:#{$scale}");
 
           @include hu-responsive($class-name, $hu-pos-core-modules, $mq-scale) {
             @each $property in $properties {
@@ -39,7 +39,7 @@ $hu-pos-parents: hu-get-class-modules($hu-pos-modules, parents, null);
   @each $module in hu-format-modules($hu-pos-core-modules) {
     @each $scale, $value in $hu-pos-scale {
       @each $type, $properties in $hu-pos-types {
-        $class-name: hu-class-name("#{$type}-#{$scale}");
+        $class-name: hu-class-name("#{$type}:#{$scale}");
 
         @include hu-pseudo($class-name, $hu-pos-pseudos, $module) {
           @each $property in $properties {
@@ -55,7 +55,7 @@ $hu-pos-parents: hu-get-class-modules($hu-pos-modules, parents, null);
       @include hu-media-query($mq-value) {
         @each $scale, $value in $hu-pos-scale {
           @each $type, $properties in $hu-pos-types {
-            $class-name: hu-class-name("#{$type}-#{$scale}");
+            $class-name: hu-class-name("#{$type}:#{$scale}");
 
             @include hu-pseudo-responsive($class-name, $hu-pos-pseudos, $hu-pos-core-modules, $mq-scale) {
               @each $property in $properties {
@@ -73,7 +73,7 @@ $hu-pos-parents: hu-get-class-modules($hu-pos-modules, parents, null);
   @each $module in hu-format-modules($hu-pos-core-modules) {
     @each $scale, $value in $hu-pos-scale {
       @each $type, $properties in $hu-pos-types {
-        $class-name: hu-class-name("#{$type}-#{$scale}");
+        $class-name: hu-class-name("#{$type}:#{$scale}");
 
         @include hu-parent($class-name, $hu-pos-parents, $module) {
           @each $property in $properties {
@@ -89,7 +89,7 @@ $hu-pos-parents: hu-get-class-modules($hu-pos-modules, parents, null);
       @include hu-media-query($mq-value) {
         @each $scale, $value in $hu-pos-scale {
           @each $type, $properties in $hu-pos-types {
-            $class-name: hu-class-name("#{$type}-#{$scale}");
+            $class-name: hu-class-name("#{$type}:#{$scale}");
 
             @include hu-parent-responsive($class-name, $hu-pos-parents, $hu-pos-core-modules, $mq-scale) {
               @each $property in $properties {
