--- a/src/variables/classes/_hu-translate-x.scss
+++ b/src/variables/classes/_hu-translate-x.scss
@@ -1,8 +1,8 @@
 $hu-translate-x-modules: (base) !default;
 
 $hu-translate-x-types: (
-  n100: -100%,
-  n50: -50%,
+  -100: -100%,
+  -50: -50%,
   0: 0,
   50: 50%,
   100: 100%,
