--- a/src/classes/_hu-translate-y.scss
+++ b/src/classes/_hu-translate-y.scss
@@ -5,7 +5,7 @@ $hu-translate-y-parents: hu-get-class-modules($hu-translate-y-modules, parents, 
 
 @each $module in hu-format-modules($hu-translate-y-core-modules) {
   @each $type, $value in $hu-translate-y-types {
-    $class-name: hu-class-name("translate-y-#{$type}");
+    $class-name: hu-class-name("translate-y:#{$type}");
     $property: transform;
     $value: if($value, $value, $type);
 
@@ -19,7 +19,7 @@ $hu-translate-y-parents: hu-get-class-modules($hu-translate-y-modules, parents, 
   @each $mq-scale, $mq-value in $hu-media-queries {
     @include hu-media-query($mq-value) {
       @each $type, $value in $hu-translate-y-types {
-        $class-name: hu-class-name("translate-y-#{$type}");
+        $class-name: hu-class-name("translate-y:#{$type}");
         $property: translate-y;
         $value: if($value, $value, $type);
 
@@ -34,7 +34,7 @@ $hu-translate-y-parents: hu-get-class-modules($hu-translate-y-modules, parents, 
 @if ($hu-translate-y-pseudos) {
   @each $module in hu-format-modules($hu-translate-y-core-modules) {
     @each $type, $value in $hu-translate-y-types {
-      $class-name: hu-class-name("translate-y-#{$type}");
+      $class-name: hu-class-name("translate-y:#{$type}");
       $property: transform;
       $value: if($value, $value, $type);
 
@@ -48,7 +48,7 @@ $hu-translate-y-parents: hu-get-class-modules($hu-translate-y-modules, parents, 
     @each $mq-scale, $mq-value in $hu-media-queries {
       @include hu-media-query($mq-value) {
         @each $type, $value in $hu-translate-y-types {
-          $class-name: hu-class-name("translate-y-#{$type}");
+          $class-name: hu-class-name("translate-y:#{$type}");
           $property: translate-y;
           $value: if($value, $value, $type);
 
@@ -64,7 +64,7 @@ $hu-translate-y-parents: hu-get-class-modules($hu-translate-y-modules, parents, 
 @if ($hu-translate-y-parents) {
   @each $module in hu-format-modules($hu-translate-y-core-modules) {
     @each $type, $value in $hu-translate-y-types {
-      $class-name: hu-class-name("translate-y-#{$type}");
+      $class-name: hu-class-name("translate-y:#{$type}");
       $property: transform;
       $value: if($value, $value, $type);
 
@@ -78,7 +78,7 @@ $hu-translate-y-parents: hu-get-class-modules($hu-translate-y-modules, parents, 
     @each $mq-scale, $mq-value in $hu-media-queries {
       @include hu-media-query($mq-value) {
         @each $type, $value in $hu-translate-y-types {
-          $class-name: hu-class-name("translate-y-#{$type}");
+          $class-name: hu-class-name("translate-y:#{$type}");
           $property: translate-y;
           $value: if($value, $value, $type);
 
