--- a/src/variables/classes/_hu-rotate.scss
+++ b/src/variables/classes/_hu-rotate.scss
@@ -1,11 +1,11 @@
 $hu-rotate-modules: () !default;
 
 $hu-rotate-types: (
-  n360: -360deg,
-  n270: -270deg,
-  n180: -180deg,
-  n90: -90deg,
-  n45: -45deg,
+  -360: -360deg,
+  -270: -270deg,
+  -180: -180deg,
+  -90: -90deg,
+  -45: -45deg,
   0: 0,
   45: 45deg,
   90: 90deg,
