--- a/src/variables/classes/_hu-border-radius.scss
+++ b/src/variables/classes/_hu-border-radius.scss
@@ -12,12 +12,12 @@ $hu-border-radius-scale: (
 
 $hu-border-radius-types: (
   border-radius: border-radius,
-  border-radius-b: (border-bottom-left-radius, border-bottom-right-radius),
-  border-radius-bl: border-bottom-left-radius,
-  border-radius-br: border-bottom-right-radius,
-  border-radius-l: (border-bottom-left-radius, border-top-left-radius),
-  border-radius-r: (border-bottom-right-radius, border-top-right-radius),
-  border-radius-t: (border-top-left-radius, border-top-right-radius),
-  border-radius-tl: border-top-left-radius,
-  border-radius-tr: border-top-right-radius,
+  border-radius-bottom: (border-bottom-left-radius, border-bottom-right-radius),
+  border-radius-bottom-left: border-bottom-left-radius,
+  border-radius-bottom-right: border-bottom-right-radius,
+  border-radius-left: (border-bottom-left-radius, border-top-left-radius),
+  border-radius-right: (border-bottom-right-radius, border-top-right-radius),
+  border-radius-top: (border-top-left-radius, border-top-right-radius),
+  border-radius-top-left: border-top-left-radius,
+  border-radius-top-right: border-top-right-radius,
 ) !default;
