--- a/src/classes/_hu-theme-color.scss
+++ b/src/classes/_hu-theme-color.scss
@@ -20,7 +20,7 @@
           $class-name: hu-class-name("color-#{$key}");
           $property: color;
 
-          @include hu-theme-responsive($class-name, $theme, $hu-theme-bg-color-modules, $theme) {
+          @include hu-theme-responsive($class-name, $theme, $hu-theme-bg-color-modules, $mq-scale) {
             #{$property}: $value #{hu-important()};
           }
         }
