--- a/src/mixins/_hu-pseudo.scss
+++ b/src/mixins/_hu-pseudo.scss
@@ -52,7 +52,7 @@
 
       @else if ($module == reduced-motion) {
         @media (prefers-reduced-motion: reduce) {
-          .reduced-motion-#{$pseudo-class-name}--#{$class-name}#{$pseudo} {
+          .#{hu-escape-class-name("@reduced-motion")}-#{$pseudo-class-name}--#{$class-name}#{$pseudo} {
             @include hu-bump-specificity {
               @content;
             }
