use colon :prefix for all focus, hover and hocus class names

--- a/src/mixins/_hu-parent-responsive.scss
+++ b/src/mixins/_hu-parent-responsive.scss
@@ -11,20 +11,20 @@
       }
 
       @if (index($modules, focus)) {
-        #{$hu-focus-parent} .#{$escaped-parent} .#{$escaped-child}__#{hu-escape-class-name("@mq-#{$mq-scale}")}-focus--#{$class-name}#{$hu-focus-pseudo} {
+        #{$hu-focus-parent} .#{$escaped-parent} .#{$escaped-child}__#{hu-escape-class-name("@mq-#{$mq-scale}:focus")}--#{$class-name}#{$hu-focus-pseudo} {
           @content;
         }
       }
 
       @if (index($modules, hover)) {
-        .#{$escaped-parent} .#{$escaped-child}__#{hu-escape-class-name("@mq-#{$mq-scale}")}-hover--#{$class-name}:hover {
+        .#{$escaped-parent} .#{$escaped-child}__#{hu-escape-class-name("@mq-#{$mq-scale}:hover")}--#{$class-name}:hover {
           @content;
         }
       }
 
       @if (index($modules, hocus)) {
-        #{$hu-focus-parent} .#{$escaped-parent} .#{$escaped-child}__#{hu-escape-class-name("@mq-#{$mq-scale}")}-hocus--#{$class-name}#{$hu-focus-pseudo},
-        .#{$escaped-parent} .#{$escaped-child}__#{hu-escape-class-name("@mq-#{$mq-scale}")}-hocus--#{$class-name}:hover {
+        #{$hu-focus-parent} .#{$escaped-parent} .#{$escaped-child}__#{hu-escape-class-name("@mq-#{$mq-scale}:hocus")}--#{$class-name}#{$hu-focus-pseudo},
+        .#{$escaped-parent} .#{$escaped-child}__#{hu-escape-class-name("@mq-#{$mq-scale}:hocus")}--#{$class-name}:hover {
           @content;
         }
       }
