--- a/src/mixins/_hu-parent.scss
+++ b/src/mixins/_hu-parent.scss
@@ -11,20 +11,20 @@
       }
 
       @else if ($module == focus) {
-        #{$hu-focus-parent} .#{$escaped-parent} .#{$escaped-child}__focus--#{$class-name}#{$hu-focus-pseudo} {
+        #{$hu-focus-parent} .#{$escaped-parent} .#{$escaped-child}__#{hu-escape-class-name(":focus")}--#{$class-name}#{$hu-focus-pseudo} {
           @content;
         }
       }
 
       @else if ($module == hover) {
-        .#{$escaped-parent} .#{$escaped-child}__hover--#{$class-name}:hover {
+        .#{$escaped-parent} .#{$escaped-child}__#{hu-escape-class-name(":hover")}--#{$class-name}:hover {
           @content;
         }
       }
 
       @else if ($module == hocus) {
-        #{$hu-focus-parent} .#{$escaped-parent} .#{$escaped-child}__hocus--#{$class-name}#{$hu-focus-pseudo},
-        .#{$escaped-parent} .#{$escaped-child}__hocus--#{$class-name}:hover {
+        #{$hu-focus-parent} .#{$escaped-parent} .#{$escaped-child}__#{hu-escape-class-name(":hocus")}--#{$class-name}#{$hu-focus-pseudo},
+        .#{$escaped-parent} .#{$escaped-child}__#{hu-escape-class-name(":hocus")}--#{$class-name}:hover {
           @content;
         }
       }
